# SynergyPortfolio

./: LICENSE  README.md
CA-DSGN1/: README.md  README.txt
CA-DSGN1/prototype/: bodies.html  body_detail.html  cart.html  checkout.html  implant_detail.html  implants.html  index.html  success.html
CA-DSGN1PLUS/: README.md
CA-DSGN2/: README.md
CA-JSTS1/: README.md
CA-JSTS1/public/: index.html
CA-JSTS1/src/components/: FormField.tsx  SelectField.tsx  StatsChart.tsx  TaskCard.tsx
CA-JSTS1MAX/: README.md
CA-JSTS1PLUS/src/: App.tsx  index.tsx
CA-JSTS1PLUS/src/components/: FormField.tsx  MultiSelectChips.tsx  SelectField.tsx  StatsChart.tsx  TaskCard.tsx
CA-JSTS1PLUS/src/context/: AppContext.tsx
CA-JSTS1PLUS/src/utils/: helpers.ts
CS1/: README.md  birthdate_app.py
CS1MAX/web/birthdate_web/: asgi.py  settings.py  urls.py  wsgi.py
CS1PLUS/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
CS1PLUS/web/birthdate_web_app/migrations/: 0001_initial.py
CS2/: README.md
CS2MAX/: README.md  index.html  jest.config.js  package.json  playwright.config.js  style.css
CS2PLUS/src/business/: counter.js
CS2PLUS/src/ui/: app.js
CS3/: README.md
CS3/greeting_project/greeting/templates/greeting/: index.html
CS3MAX/greeting_project/: settings.py  urls.py
CS3PLUS/: README.md
CS3PLUS/greeting_project/: settings.py
CS4/: README.md
CS4MAX/: README.md
CS4MAX/public/: app.js  index.html  styles.css  worker.js
CS4MAX/tests/: calculator.test.js
CS4PLUS/tests/: runTests.js
CS5MAX/: CS2.md  CS4.md
CS5PLUS/: CS1.md  CS3.md  CS4.md
(+1 files in other folders)
