[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birthdate-app"
version = "1.0.0"
description = "Birthdate utility: weekday, leap year check, age calculation, CLI/GUI/Web with history storage."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="KR Team 965"}]
dependencies = []

[project.scripts]
birthdate = "birthdate_app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
